# tachyon-oracles

./: .env.example  .github-security-note.txt  .gitignore  AVAILABLE_DATA.md  CONSOLE_GUIDE.md  DEPLOYMENT.md  GITHUB_READY.md  NEW_NODE_SETUP.md  PRICE_FEEDS_CONTRACT.md  QUICKSTART.md  README.md  TACHYON_INSIGHTS_PLAN.md  TELEGRAM_BOT_GUIDE.md  autopilot.sh  config.env.example  ecosystem.config.js  install-validator.sh  install.sh  package-lock.json  package.json  stake-simple.js  tachyon  tachyon-console.sh  tsconfig.json
api-service/: .env.example  README.md  package-lock.json  package.json  setup.sh
api-service/src/: index.ts
demo/: package.json
demo/src/: read-feed.ts
l2-contracts/: Anchor.toml  SETUP_GUIDE.md  setup-vanity-addresses.sh  sync-program-ids.sh
l2-contracts/programs/tachyon-bridge/: Cargo.toml
l2-contracts/programs/tachyon-bridge/src/: lib.rs
l2-contracts/programs/tachyon-governance/: Cargo.toml
l2-contracts/programs/tachyon-governance/src/: lib.rs
l2-contracts/programs/tachyon-l2-core/: Cargo.toml
l2-contracts/programs/tachyon-l2-core/src/: lib.rs
l2-contracts/programs/tachyon-price-feeds/: Cargo.toml
l2-contracts/programs/tachyon-price-feeds/src/: lib.rs
l2-contracts/programs/tachyon-sequencer/: Cargo.toml
l2-contracts/programs/tachyon-sequencer/src/: lib.rs
l2-contracts/programs/tachyon-state-compression/: Cargo.toml
l2-contracts/programs/tachyon-state-compression/src/: lib.rs
l2-contracts/programs/tachyon-verifier/: Cargo.toml
l2-contracts/programs/tachyon-verifier/src/: lib.rs
l2-contracts/scripts/: init-all-v2.ts  init-contracts.ts  init-governance.js  init-l2-state-only.js  init-sequencer.js  init-simple.ts  initialize-all.ts  initialize-l2-state.js  manual-init.sh  query-governance.js  update-l2-authority.js  upgrade-governance.ts
l2-contracts/tests/: l2-compression.ts
program/: Cargo.toml
program/src/: error.rs  lib.rs  state.rs  utils.rs
program/src/instructions/: add_asset.rs  initialize_config.rs  mod.rs  post_update.rs  register_publisher.rs  set_publisher_status.rs
program/tests/: test_oracle.rs
relayer/: package.json
relayer/src/: cache.ts  config.ts  index.ts  logger.ts
scripts/: activate-publisher.js  add-asset-simple.js  add-asset.js  initialize-simple.js  initialize.js  register-publisher-simple.js  register-publisher.js
sdk/: package.json
sdk/src/: accounts.ts  constants.ts  index.ts  instructions.ts  types.ts  utils.ts
signer/: config.yaml  package.json
signer/src/: config.ts  fetcher.ts  index.ts  logger.ts
tachyon-indexer/: package.json
tachyon-node/: BUILD_STATUS.md  Cargo.toml  README.md  install.sh  tachyon-node.service
tachyon-node/src/: main.rs  price_feeds.rs
tachyon-node/src/accounts_db/: account_info.rs  account_locks.rs  account_storage.rs  accounts.rs  accounts_cache.rs  accounts_db.rs  accounts_file.rs  accounts_hash.rs  accounts_index.rs  accounts_index_storage.rs  accounts_partition.rs  accounts_update_notifier_interface.rs  active_stats.rs  ancestors.rs  ancient_append_vecs.rs  append_vec.rs  blockhash_queue.rs  bucket_map_holder.rs  bucket_map_holder_stats.rs  buffered_reader.rs  cache_hash_data.rs  cache_hash_data_stats.rs  contains.rs  epoch_accounts_hash.rs  file_io.rs  hardened_unpack.rs  lib.rs  mod.rs  oracle_storage.rs  partitioned_rewards.rs  pubkey_bins.rs  read_only_accounts_cache.rs  rolling_bit_field.rs  secondary_index.rs  shared_buffer_reader.rs  sorted_storages.rs  stake_rewards.rs  storable_accounts.rs  tiered_storage.rs  utils.rs  (+2 more)
tachyon-node/src/aggregator/: mod.rs
tachyon-node/src/api/: mod.rs
tachyon-node/src/config/: mod.rs
tachyon-node/src/consensus/: mod.rs  oracle_tower.rs
tachyon-node/src/crypto/: mod.rs
tachyon-node/src/fetcher/: mod.rs  robust_fetcher.rs
tachyon-node/src/gossip/: crds.rs  mod.rs  push_pull.rs
tachyon-node/src/gossip_v2/: mod.rs
tachyon-node/src/ledger/: ancestor_iterator.rs  bank_forks_utils.rs  bigtable_delete.rs  bigtable_upload.rs  bigtable_upload_service.rs  block_error.rs  blockstore.rs  blockstore_cleanup_service.rs  blockstore_db.rs  blockstore_meta.rs  blockstore_metric_report_service.rs  blockstore_metrics.rs  blockstore_options.rs  blockstore_processor.rs  entry_notifier_interface.rs  entry_notifier_service.rs  genesis_utils.rs  leader_schedule.rs  leader_schedule_cache.rs  leader_schedule_utils.rs  lib.rs  mod.rs  next_slots_iterator.rs  oracle_ledger.rs  rooted_slot_iterator.rs  shred.rs  shredder.rs  sigverify_shreds.rs  slot_stats.rs  staking_utils.rs  token_balances.rs  transaction_address_lookup_table_scanner.rs  use_snapshot_archives_at_startup.rs
tachyon-node/src/metrics/: mod.rs
tachyon-node/src/poh/: leader_bank_notifier.rs  lib.rs  mod.rs  oracle_poh.rs  poh_recorder.rs  poh_service.rs
tachyon-node/src/sequencer/: mod.rs
tachyon-node/src/streamer/: lib.rs  mod.rs  msghdr.rs  oracle_packet.rs  oracle_socket.rs  packet.rs  quic.rs  recvmmsg.rs  sendmmsg.rs  socket.rs  streamer.rs
tachyon-node/src/turbine/: broadcast_stage.rs  cluster_nodes.rs  lib.rs  mod.rs  oracle_propagation.rs  quic_endpoint.rs  retransmit_stage.rs  sigverify_shreds.rs
tachyon-node/src/vote/: lib.rs  mod.rs  oracle_vote.rs  vote_account.rs  vote_parser.rs  vote_transaction.rs
telegram-bot/: .env.example  README.md  package-lock.json  package.json  setup.sh
telegram-bot/src/: console-bot.ts  index.ts
