[package]
name = "tachyon-oracles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tachyon_oracles"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
borsh = "0.10.3"
sha2 = "0.10.8"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
anchor-client = "0.29.0"
tokio = { version = "1.35.0", features = ["full"] }
