[package]
name = "tachyon-node"
version = "1.0.0"
edition = "2021"
authors = ["Tachyon Network"]
description = "Unified oracle node for Tachyon Network on X1"

[[bin]]
name = "tachyon-node"
path = "src/main.rs"

[dependencies]
# Use Solana SDK versions matching our Anchor contracts
solana-sdk = "2.2"
solana-client = "2.2"
solana-program = "2.2"
anchor-spl = "0.32.1"
# Note: anchor-spl includes spl-token and spl-associated-token-account

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "1.5"

# Cryptography
sha2 = "0.10"
bs58 = "0.5"

# HTTP/WebSocket
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.1"
reqwest = { version = "0.11", features = ["json"] }

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Configuration
toml = "0.8"
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
futures = "0.3"
rand = "0.8"
ed25519-dalek = "2.1"
once_cell = "1.19"
parking_lot = "0.12"
crossbeam-channel = "0.5"
hex = "0.4"
shellexpand = "3.1"

# ============================================================================
# Solana Components for Production-Grade Oracle Network
# ============================================================================

# Streamer - High-performance packet processing
quinn = "0.11"
quinn-proto = "0.11"
rustls = "0.23"
socket2 = "0.5"
bytes = "1.5"
dashmap = "5.5"
histogram = "0.11"
indexmap = "2.2"
itertools = "0.12"
libc = "0.2"
nix = { version = "0.28", features = ["net"] }
pem = "3.0"
percentage = "0.1"
smallvec = "1.13"

# Turbine - Efficient data propagation
rand_chacha = "0.3"
rayon = "1.8"
lru = "0.12"

# Ledger - Historical storage
rocksdb = "0.22"

# Accounts-DB - High-performance storage
tempfile = "3.10"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
