[package]
name = "tachyon-price-feeds"
version = "0.1.0"
description = "Price feed storage for Tachyon Oracle Network"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tachyon_price_feeds"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"

