[package]
name = "tachyon-verifier"
version = "0.1.0"
description = "Tachyon L2 Oracle Network - verifier"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tachyon_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
solana-program = "2.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
